# python-mock-database-generator

./: .env.example  .gitignore  README.md  pyproject.toml
src/python_database/: main.py
src/python_database/configuration/: db_config.py
src/python_database/data/: data_generator.py
src/python_database/data/providers/: genre_provider.py
src/python_database/databases/: database.py  database_postgres.py  database_sqlite.py  supported_databases.py
src/python_database/tables/classes/: column.py  table.py
src/python_database/tables/objects/: books.py  userbooks.py  users.py
