[project]
name = "python-mock-database-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Higgins",email = "none@none.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faker (>=38.0.0,<39.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
]

[tool.poetry]
packages = [{include = "python_database", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
